--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,14 @@ aes-ctr = "0.6.0"
 base64 = "0.13.0"
 clap = { version = "3.1.6", features = ["derive"] }
 dirs = "4.0"
+hex = "0.4.3"
 hmac = "0.12.1"
 librespot-core = "0.3.1"
 librespot-protocol = "0.3.1"
 minreq = { version = "2.6", default-features = false, features = ['urlencoding'] }
 pbkdf2 = "0.11"
 rand = "0.8.5"
+serde = "1.0.136"
 serde_json = "1.0.79"
 sha-1 = "0.10.0"
 tokio = "1.17.0"
