main: split authenticate function out of main
Also adds log and env_logger dependencies so the broken out function
can report its status.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ version = "0.1.0"
 base64 = "0.13.0"
 clap = { version = "3.1.6", features = ["derive"] }
 dirs = "4.0"
+env_logger = "0.10.1"
 librespot-core = "0.3.1"
 librespot-protocol = "0.3.1"
+log = "0.4.20"
 rand = "0.8.5"
 rpassword = "6.0.1"
