Update librespot to 0.5.0-dev version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ version = "0.1.0"
 clap = { version = "3.1.6", features = ["derive"] }
 dirs = "4"
 env_logger = "0.10"
-librespot-core = "0.4.2"
-librespot-protocol = "0.4.2"
+librespot-core = { git = "https://github.com/librespot-org/librespot", rev = "fb5c0efdd65d87f1f506b9198227d64370b69f18" }
+librespot-protocol = { git = "https://github.com/librespot-org/librespot", rev = "fb5c0efdd65d87f1f506b9198227d64370b69f18" }
 log = "0.4"
 rpassword = "6"
