--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,8 +9,8 @@ aes-ctr = "0.6.0"
 base64 = "0.13.0"
 hex = "0.4.3"
 hmac = "0.12.1"
-librespot-core = "0.4.2"
-librespot-protocol = "0.4.2"
+librespot-core = { git = "https://github.com/librespot-org/librespot", rev = "fb5c0efdd65d87f1f506b9198227d64370b69f18" }
+librespot-protocol = { git = "https://github.com/librespot-org/librespot", rev = "fb5c0efdd65d87f1f506b9198227d64370b69f18" }
 log = "0.4"
 minreq = { version = "2.6", default-features = false, features = ['urlencoding'] }
 pbkdf2 = "0.11"
